[gd_scene load_steps=13 format=3 uid="uid://cff0irid7qcej"]

[ext_resource type="Script" path="res://scripts/game/player.gd" id="1_je4ut"]
[ext_resource type="PackedScene" uid="uid://dny78qniqp7xr" path="res://prefabs/art/pc_skeleton.tscn" id="1_sgups"]
[ext_resource type="AudioStream" uid="uid://c1f8hkln454ds" path="res://assets/audio/sfx/gameplay/Player_Gets_Hit.wav" id="3_f8x6l"]
[ext_resource type="AudioStream" uid="uid://k5n2aycmm5qm" path="res://assets/audio/sfx/gameplay/Player_Shoot.wav" id="4_pa8pa"]
[ext_resource type="AudioStream" uid="uid://b6e4ssr66ybe4" path="res://assets/audio/sfx/gameplay/dead.ogg" id="5_3caag"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_bank.gd" id="6_oqx0k"]
[ext_resource type="Script" path="res://addons/resonate/sound_manager/sound_event_resource.gd" id="7_l6mex"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_reof2"]
radius = 49.0
height = 134.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4vbqq"]
radius = 90.0222

[sub_resource type="Resource" id="Resource_8rekc"]
script = ExtResource("7_l6mex")
name = "hit"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("3_f8x6l"), ExtResource("3_f8x6l"), ExtResource("3_f8x6l")])

[sub_resource type="Resource" id="Resource_jjxrw"]
script = ExtResource("7_l6mex")
name = "shoot"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("4_pa8pa"), ExtResource("4_pa8pa"), ExtResource("4_pa8pa")])

[sub_resource type="Resource" id="Resource_p127n"]
script = ExtResource("7_l6mex")
name = "dead"
bus = ""
volume = 0.0
pitch = 1.0
streams = Array[AudioStream]([ExtResource("5_3caag")])

[node name="Player" type="CharacterBody2D"]
z_index = 3
collision_mask = 0
script = ExtResource("1_je4ut")
Health = 4
TimeToNextDamage = 1.3
DashDuration = 1.4

[node name="PC_Skeleton" parent="." instance=ExtResource("1_sgups")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_reof2")

[node name="BulletSpawnPos" type="Marker2D" parent="."]
position = Vector2(0, 58)
gizmo_extents = 100.0

[node name="ShieldArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldArea"]
shape = SubResource("CircleShape2D_4vbqq")
disabled = true
debug_color = Color(0.784314, 0.321569, 0.737255, 0.419608)

[node name="ShieldTimer" type="Timer" parent="."]
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
one_shot = true

[node name="DashRestockTimer" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DamagedTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ShieldRestockTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerSounds" type="Node" parent="."]
script = ExtResource("6_oqx0k")
label = "player"
bus = "GameSFX"
events = Array[ExtResource("7_l6mex")]([SubResource("Resource_8rekc"), SubResource("Resource_jjxrw"), SubResource("Resource_p127n")])

[connection signal="body_entered" from="ShieldArea" to="." method="_on_shield_area_body_entered"]
[connection signal="timeout" from="ShieldTimer" to="." method="_on_shield_timer_timeout"]
[connection signal="timeout" from="GunTimer" to="." method="_on_gun_timer_timeout"]
[connection signal="timeout" from="DashRestockTimer" to="." method="_on_dash_restock_timer_timeout"]
[connection signal="timeout" from="DamagedTimer" to="." method="_on_damaged_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="ShieldRestockTimer" to="." method="_on_shield_restock_timer_timeout"]
